--- a/waimai/public/index.html
+++ b/waimai/public/index.html
@@ -8,14 +8,12 @@
     />
     <title>MintShop</title>
     <!-- 引入reset css -->
-    <link rel="stylesheet" href="/css/reset.css" />
+    <!-- <link rel="stylesheet" href="../src/assets/css/reset.css" /> 移到mainjs--> 
     <!-- 引入Iconfont -->
     <link
       rel="stylesheet"
       href="http://at.alicdn.com/t/font_726904_ubdf6pmxsf.css"
     />
-    <link rel="stylesheet" href="./css/reset.css">
-
   </head>
   <body>
     <div id="app"></div>
